test/variables/sungeun/refvar-no-init-with-use.good
refvar-no-init-with-use.chpl:1: error: References must be initialized
